--- a/team.html
+++ b/team.html
@@ -70,12 +70,13 @@
         <!-- menu -->
         <div class="mil-menu-frame">
             <!-- frame clone -->
-            <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo"><img class="img8" src="img/base/FNF LOGO NEW.png" loading="lazy" alt=""></a>
-                <div class="mil-menu-btn">
+            <!-- <div class="mil-frame-top">
+                <a href="home-1.html" class="mil-logo"><img class="custlogo" src="img/base/FNF LOGO NEW.png"
+                        alt="fnflogo"></a>
+                <div class="mil-menu-btn" style="background: balck;">
                     <span></span>
                 </div>
-            </div>
+            </div> -->
             <!-- frame clone end -->
             <div class="container">
                 <div class="mil-menu-content">
@@ -84,47 +85,93 @@
 
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
-                                    <li class="mil-has-children">
-                                        <a href="#.">Homepage</a>
-                                        <ul>
-                                            <li><a href="home-1.html">Landing page</a></li>
-                                            <li><a href="home-2.html">Personal</a></li>
-                                            <li><a href="portfolio-3.html">Portfolio slider</a></li>
-                                        </ul>
+                                    <li class="mil-up  mil-dark">
+                                        <a class="mil-dark" href="home-1.html">Home Page</a>
                                     </li>
-                                    <li class="mil-has-children">
-                                        <a href="#.">Portfolio</a>
-                                        <ul>
-                                            <li><a href="portfolio-1.html">Grid type 1</a></li>
-                                            <li><a href="portfolio-2.html">Grid type 2</a></li>
-                                            <li><a href="portfolio-3.html">Slider</a></li>
-                                        </ul>
+                                    <li class="mil-up mil-active mil-dark">
+                                        <a class="" href="design.html">Branding & Design</a>
                                     </li>
-                                    <li class="mil-has-children">
-                                        <a href="#.">Services</a>
-                                        <ul>
-                                            <li><a href="services.html">Services List</a></li>
-                                            <li><a href="service.html">Single service</a></li>
-                                        </ul>
+                                    <li class="mil-up mil-dark">
+                                        <a class="mil-dark" href="content.html">Content Production</a>
                                     </li>
-                                    <li class="mil-has-children">
-                                        <a href="#.">Newsletter</a>
-                                        <ul>
-                                            <li><a href="blog.html">Blog List</a></li>
-                                            <li><a href="publication.html">Publication</a></li>
-                                        </ul>
+                                    <li class="mil-up mil-dark">
+                                        <a class="mil-dark" href="consult.html">Consult</a>
                                     </li>
-                                    <li class="mil-has-children mil-active">
-                                        <a href="#.">Other pages</a>
-                                        <ul>
-                                            <li><a href="team.html">Team</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                            <li><a href="404.html">404</a></li>
-                                        </ul>
-                                    </li>
+                                    <!-- <li class="mil-up mil-dark">
+                                        <a class="mil-dark" href="#.">Blog</a>
+                                    </li> -->
                                 </ul>
                             </nav>
+
                         </div>
+                        <div class="col-xl-7">
+
+                            <div class="mil-menu-right-frame">
+                                <div class="mil-animation-in mil-tab-mobile">
+                                    <div class="mil-animation-frame">
+                                        <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2"
+                                            data-value-2="2"></div>
+                                    </div>
+                                </div>
+                                <div class="mil-menu-right mil-tab-mobile">
+                                    <div class="row">
+                                        <div class="col-lg-8 mil-mb-25">
+
+                                            <h6 class="mil-maroon mil-mb-30">Projects</h6>
+
+                                            <ul class="mil-menu-list">
+                                                <li><a href="#." class="mil-light-dark">Interior design
+                                                        studio</a></li>
+                                                <li><a href="#." class="mil-light-dark">Home Security
+                                                        Camera</a></li>
+                                                <li><a href="#." class="mil-light-dark">Kemia Honest
+                                                        Skincare</a></li>
+                                                <li><a href="#." class="mil-light-dark">Cascade of Lava</a>
+                                                </li>
+                                                <li><a href="#." class="mil-light-dark">Air Pro by
+                                                        Molekule</a></li>
+                                                <li><a href="#." class="mil-light-dark">Tony's
+                                                        Chocolonely</a></li>
+                                            </ul>
+
+                                        </div>
+                                        <div class="col-lg-4 mil-mb-25">
+
+                                            <h6 class="mil-maroon mil-mb-30">Useful links</h6>
+
+                                            <ul class="mil-menu-list">
+                                                <li><a href="#." class="mil-light-dark">Privacy Policy</a></li>
+                                                <li><a href="#." class="mil-light-dark">Terms and conditions</a></li>
+                                                <li><a href="#." class="mil-light-dark">Cookie Policy</a></li>
+                                                <li><a href="#." class="mil-light-dark">Careers</a></li>
+                                            </ul>
+
+                                        </div>
+                                    </div>
+                                    <div class="mil-divider mil-mb-25"></div>
+                                    <div class="row justify-content-between">
+
+                                        <div class="col-lg-4 mil-mb-60">
+
+                                            <h6 class="mil-maroon mil-mb-30">Canada</h6>
+
+                                            <p class="mil-light-dark mil-up">71 South Los Carneros Road, California
+                                                <span class="mil-no-wrap">+51 174 705 812</span>
+                                            </p>
+
+                                        </div>
+                                        <div class="col-lg-4 mil-mb-60">
+
+                                            <h6 class="mil-maroon mil-mb-30">Germany</h6>
+
+                                            <p class="mil-light-dark">Leehove 40, 2678 MC De Lier, Netherlands <span
+                                                    class="mil-no-wrap">+31 174 705 811</span></p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
