--- a/team.html
+++ b/team.html
@@ -213,7 +213,7 @@
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="6" data-value-2="1.4"></div>
                         </div>
-                        <div class="container">
+                        <div class="container mil-mb-80">
                             <!-- <ul class="mil-breadcrumbs mil-mb-60">
                                 <li><a href="home-1.html">Homepage</a></li>
                                 <li><a href="team.html">Team</a></li>
