--- a/home-1.html
+++ b/home-1.html
@@ -196,7 +196,7 @@
         <!-- curtain end -->
 
         <!-- frame -->
-        <!-- <div class="mil-frame">
+        <div class="mil-frame">
             <div class="mil-frame-top">
                 <a href="home-1.html" class="mil-logo"><img class="custlogo" src="img/base/FNF LOGO NEW.png"
                         loading="lazy" alt="fnflogo"></a>
@@ -204,15 +204,15 @@
                     <span></span>
                 </div>
             </div>
-            <div class="mil-frame-bottom">
+           <!--  <div class="mil-frame-bottom">
                 <div class="mil-current-page"></div>
                 <div class="mil-back-to-top">
                     <a href="#top" class="mil-link mil-maroon mil-arrow-place">
                         <span>Back to top</span>
                     </a>
                 </div>
-            </div>
-        </div> -->
+            </div>-->
+        </div> 
         <!-- frame end -->
 
         <!-- content -->
