--- a/team.html
+++ b/team.html
@@ -213,11 +213,11 @@
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="6" data-value-2="1.4"></div>
                         </div>
-                        <div class="container mil-mb-80">
-                            <!-- <ul class="mil-breadcrumbs mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
-                                <li><a href="team.html">Team</a></li>
-                            </ul> -->
+                        <div class="container">
+                            <ul class="mil-breadcrumbs mil-mb-60">
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                            </ul>
                             <h1 class="mil-mb-60">Meet <span class="mil-thin">Our</span><br> Creative <span class="mil-thin">Team</span></h1>
                             <a href="#team" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Our team</span>
