--- a/team.html
+++ b/team.html
@@ -209,15 +209,15 @@
 
                 <!-- banner -->
                 <div class="mil-inner-banner">
-                    <div class="mil-banner-content mil-up">
+                    <div class="mil-banner-content mil-up mil-mb-60">
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="6" data-value-2="1.4"></div>
                         </div>
-                        <div class="container">
-                            <ul class="mil-breadcrumbs mil-mb-60">
+                        <div class="container mil-mb-60">
+                            <!-- <ul class="mil-breadcrumbs mil-mb-60">
                                 <li><a href=""></a></li>
                                 <li><a href=""></a></li>
-                            </ul>
+                            </ul> -->
                             <h1 class="mil-mb-60">Meet <span class="mil-thin">Our</span><br> Creative <span class="mil-thin">Team</span></h1>
                             <a href="#team" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                                 <span>Our team</span>
