--- a/design.html
+++ b/design.html
@@ -247,7 +247,7 @@
                 <!-- bg video playing -->
                 <div class="video-container">
                     <video id="video" autoplay loop muted>
-                        <source src="video/vid1.mp4" type="video/mp4">
+                        <source src="video/design.mov" type="video/mp4">
                     </video>
                     <button id="play-pause-btn" class="play">&#10074;&#10074;</button>
                 </div>
@@ -745,7 +745,125 @@
                             <h3 class="hd-cor">Food On Focus - Project 1</h3>
                         </div>
                         <div class="image-container2">
-                            <img id="hoverable-img" src="img/works/2.jpg" alt="Project Image">
+                            <img id="hoverable-img" src="img/projects/9.jpeg" alt="Project Image">
+                        </div>
+                    </div>
+                    <div class="but-mid">
+                        <button class="animated-button" onclick="window.location.href='#.'">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                            <span class="text2">Button 1</span>
+                            <span class="circle"></span>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                        </button>
+
+                        <button class="animated-button" onclick="window.location.href='#.'">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                            <span class="text2">Button 2</span>
+                            <span class="circle"></span>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="container2">
+                        <div class="box2">
+                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Year<br>
+                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">2024</p>
+                            </h3>
+                        </div>
+                        <div class="box2">
+                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Country<br>
+                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">India
+                                </p>
+                            </h3>
+                        </div>
+
+                    </div>
+                    <div class="divider"></div>
+                </div>
+                <!-- 1product -->
+
+                <!-- 1product -->
+                <div>
+                    <div class="project">
+                        <div class="project-details">
+                            <h3 class="hd-cor">Food On Focus - Project 2</h3>
+                        </div>
+                        <div class="image-container2">
+                            <img id="hoverable-img" src="img/projects/4.jpeg" alt="Project Image">
+                        </div>
+                    </div>
+                    <div class="but-mid">
+                        <button class="animated-button" onclick="window.location.href='#.'">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                            <span class="text2">Button 1</span>
+                            <span class="circle"></span>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                        </button>
+
+                        <button class="animated-button" onclick="window.location.href='#.'">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                            <span class="text2">Button 2</span>
+                            <span class="circle"></span>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
+                                <path
+                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
+                                </path>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="container2">
+                        <div class="box2">
+                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Year<br>
+                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">2024</p>
+                            </h3>
+                        </div>
+                        <div class="box2">
+                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Country<br>
+                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">India
+                                </p>
+                            </h3>
+                        </div>
+
+                    </div>
+                    <div class="divider"></div>
+                </div>
+                <!-- 1product -->
+
+                <!-- 1product -->
+                <div>
+                    <div class="project">
+                        <div class="project-details">
+                            <h3 class="hd-cor">Food On Focus - Project 3</h3>
+                        </div>
+                        <div class="image-container2">
+                            <img id="hoverable-img" src="img/projects/2.jpeg" alt="Project Image">
                         </div>
                     </div>
                     <div class="but-mid">
@@ -804,125 +922,7 @@
                             <h3 class="hd-cor">Food On Focus - Project 1</h3>
                         </div>
                         <div class="image-container2">
-                            <img id="hoverable-img" src="img/works/3.jpg" alt="Project Image">
-                        </div>
-                    </div>
-                    <div class="but-mid">
-                        <button class="animated-button" onclick="window.location.href='#.'">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                            <span class="text2">Button 1</span>
-                            <span class="circle"></span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                        </button>
-
-                        <button class="animated-button" onclick="window.location.href='#.'">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                            <span class="text2">Button 2</span>
-                            <span class="circle"></span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                        </button>
-                    </div>
-                    <div class="container2">
-                        <div class="box2">
-                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Year<br>
-                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">2024</p>
-                            </h3>
-                        </div>
-                        <div class="box2">
-                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Country<br>
-                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">India
-                                </p>
-                            </h3>
-                        </div>
-
-                    </div>
-                    <div class="divider"></div>
-                </div>
-                <!-- 1product -->
-
-                <!-- 1product -->
-                <div>
-                    <div class="project">
-                        <div class="project-details">
-                            <h3 class="hd-cor">Food On Focus - Project 1</h3>
-                        </div>
-                        <div class="image-container2">
-                            <img id="hoverable-img" src="img/works/5.jpg" alt="Project Image">
-                        </div>
-                    </div>
-                    <div class="but-mid">
-                        <button class="animated-button" onclick="window.location.href='#.'">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                            <span class="text2">Button 1</span>
-                            <span class="circle"></span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                        </button>
-
-                        <button class="animated-button" onclick="window.location.href='#.'">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-2" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                            <span class="text2">Button 2</span>
-                            <span class="circle"></span>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="arr-1" viewBox="0 0 24 24">
-                                <path
-                                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z">
-                                </path>
-                            </svg>
-                        </button>
-                    </div>
-                    <div class="container2">
-                        <div class="box2">
-                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Year<br>
-                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">2024</p>
-                            </h3>
-                        </div>
-                        <div class="box2">
-                            <h3 style="margin-bottom: -15px; padding-right: 20px; color: #f89c1f; ">Country<br>
-                                <p style="top: -15px; margin-left: 4px; color: #972221; font-size: 1.5rem;">India
-                                </p>
-                            </h3>
-                        </div>
-
-                    </div>
-                    <div class="divider"></div>
-                </div>
-                <!-- 1product -->
-
-                <!-- 1product -->
-                <div>
-                    <div class="project">
-                        <div class="project-details">
-                            <h3 class="hd-cor">Food On Focus - Project 1</h3>
-                        </div>
-                        <div class="image-container2">
-                            <img id="hoverable-img" src="img/works/6.jpg" alt="Project Image">
+                            <img id="hoverable-img" src="img/projects/7.jpeg" alt="Project Image">
                         </div>
                     </div>
                     <div class="but-mid">
