--- a/home-1.html
+++ b/home-1.html
@@ -307,7 +307,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/1.jpg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/2.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -334,7 +334,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/2.jpg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/3.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -361,7 +361,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/3.jpg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/1.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -388,7 +388,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/4.jpg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/5.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -415,7 +415,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/5.jpg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/4.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -442,7 +442,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/6.jpg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/7.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -668,7 +668,7 @@
                                         <div class="col-sm-6">
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/1.jpg" loading="lazy" alt="Team member">
+                                                <img src="img/team/1.jpeg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna
@@ -690,7 +690,7 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/3.jpg" loading="lazy" alt="Team member">
+                                                <img src="img/team/2.jpeg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar
@@ -719,7 +719,7 @@
                                             </p>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/2.jpg" loading="lazy" alt="Team member">
+                                                <img src="img/team/3.jpeg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma
@@ -741,7 +741,7 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="img/faces/4.jpg" loading="lazy" alt="Team member">
+                                                <img src="img/team/4.jpeg" loading="lazy" alt="Team member">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa
@@ -1172,10 +1172,10 @@
                         <div class="featured-works">
                             <div class="featured-work-box" id="feature-box-1">
                                 <div class="image-box">
-                                    <img src="img/featured/1.jpg" class="featured-work-img" loading="lazy" alt="">
+                                    <img src="img/featured/1.jpeg" class="featured-work-img" loading="lazy" alt="">
                                 </div>
                                 <div class="work-head">
-                                    <h5 class="feature-work-name">Work 1</h5>
+                                    <h5 class="feature-work-name">Alpro</h5>
                                 </div>
 
                                 <div class="featured-work-tags">
@@ -1185,10 +1185,10 @@
                             </div>
                             <div class="featured-work-box" id="feature-box-1">
                                 <div class="image-box">
-                                    <img src="img/featured/2.jpg" class="featured-work-img" loading="lazy" alt="">
+                                    <img src="img/featured/2.jpeg" class="featured-work-img" loading="lazy" alt="">
                                 </div>
                                 <div class="work-head">
-                                    <h5 class="feature-work-name">Work 2</h5>
+                                    <h5 class="feature-work-name">Plantoholic</h5>
                                 </div>
                                 <div class="featured-work-tags">
                                     <span class="featured-work-tag">WEBSITE</span>
