--- a/home-1.html
+++ b/home-1.html
@@ -204,7 +204,7 @@
                     <span></span>
                 </div>
             </div>
-           <!--  <div class="mil-frame-bottom">
+            <!--  <div class="mil-frame-bottom">
                 <div class="mil-current-page"></div>
                 <div class="mil-back-to-top">
                     <a href="#top" class="mil-link mil-maroon mil-arrow-place">
@@ -212,7 +212,7 @@
                     </a>
                 </div>
             </div>-->
-        </div> 
+        </div>
         <!-- frame end -->
 
         <!-- content -->
@@ -225,10 +225,10 @@
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="7"
                                 data-value-2="1.6"></div>
-                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="4"
-                                data-value-2="1"></div>
-                            <div class="mil-animation mil-position-3 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="1.2"
-                                data-value-2="1"></div>
+                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale mil-mobile-hidden"
+                                data-value-1="4" data-value-2="1"></div>
+                            <div class="mil-animation mil-position-3 mil-dark-bg mil-scale mil-mobile-hidden"
+                                data-value-1="1.2" data-value-2="1"></div>
                         </div>
 
                         <div class="mil-gradient"></div>
@@ -302,6 +302,34 @@
                             <div class="col-lg-9">
                                 <div class="swiper-container mil-portfolio-slider mil-up">
                                     <div class="swiper-wrapper">
+
+                                        <div class="swiper-slide">
+
+                                            <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
+                                                <div class="mil-cover-frame mil-drag">
+                                                    <div class="mil-cover" data-swiper-parallax-scale="1.3">
+                                                        <img src="img/projects/1.jpeg" loading="lazy" alt="cover">
+                                                    </div>
+                                                </div>
+                                                <div class="mil-descr" data-swiper-parallax-x="104%"
+                                                    data-swiper-parallax-opacity="0">
+                                                    <div class="mil-descr-text" data-swiper-parallax-y="100%"
+                                                        data-swiper-parallax-opacity="0">
+                                                        <div class="mil-labels mil-mb-15">
+                                                            <div class="mil-label mil-upper mil-accent">Alpro</div>
+                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                        </div>
+                                                        <h5>Tittle</h5>
+                                                    </div>
+                                                    <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
+                                                        <a href="#" class="mil-button mil-arrow-place">
+                                                            <span>View Project</span>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
                                         <div class="swiper-slide">
 
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
@@ -334,7 +362,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/3.jpeg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/4.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -361,7 +389,8 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/1.jpeg" loading="lazy" alt="cover">
+                                                        <img style="object-position: center;" src="img/projects/7.jpeg"
+                                                            loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -388,7 +417,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/5.jpeg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/9.jpeg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -415,7 +444,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/4.jpeg" loading="lazy" alt="cover">
+                                                        <img src="img/projects/10.jpg" loading="lazy" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -423,34 +452,7 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Project 5</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
-                                                        <h5>Tittle</h5>
-                                                    </div>
-                                                    <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="#" class="mil-button mil-arrow-place">
-                                                            <span>View Project</span>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="swiper-slide">
-
-                                            <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
-                                                <div class="mil-cover-frame mil-drag">
-                                                    <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/projects/7.jpeg" loading="lazy" alt="cover">
-                                                    </div>
-                                                </div>
-                                                <div class="mil-descr" data-swiper-parallax-x="104%"
-                                                    data-swiper-parallax-opacity="0">
-                                                    <div class="mil-descr-text" data-swiper-parallax-y="100%"
-                                                        data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Project 6</div>
+                                                            <div class="mil-label mil-upper mil-accent">Project 4</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
                                                         <h5>Tittle</h5>
@@ -539,10 +541,10 @@
                 <section class="mil-soft-bg">
                     <div class="mi-invert-fix">
                         <div class="mil-animation-frame">
-                            <div class="mil-animation mil-position-1 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="2.4"
-                                data-value-2="1.4" style="top: 300px; right: -100px"></div>
-                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="2"
-                                data-value-2="1" style="left: -100px;top: 100px;"></div>
+                            <div class="mil-animation mil-position-1 mil-dark-bg mil-scale mil-mobile-hidden"
+                                data-value-1="2.4" data-value-2="1.4" style="top: 300px; right: -100px"></div>
+                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale mil-mobile-hidden"
+                                data-value-1="2" data-value-2="1" style="left: -100px;top: 100px;"></div>
                         </div>
                         <div class="container mil-p-120-0">
 
@@ -943,20 +945,24 @@
                         <div class="swiper-container mil-infinite-show mil-up">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 60px;"><img
-                                            src="img/partners/1.svg" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img
+                                            src="img/brand-logos/talabat.png" loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 100px;"><img
-                                            src="img/partners/2.svg" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img
+                                            src="img/brand-logos/alpro.png" loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 60px;"><img
-                                            src="img/partners/1.svg" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img
+                                            src="img/brand-logos/godiva.png" loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 100px;"><img
-                                            src="img/partners/2.svg" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img
+                                            src="img/brand-logos/oma.jpg" loading="lazy" alt="logo"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#." class="mil-partner-frame"><img
+                                            src="img/brand-logos/plantaholic.png" loading="lazy" alt="logo"></a>
                                 </div>
                             </div>
                         </div>
@@ -1247,10 +1253,10 @@
                             <section class="Form-teaser">
                                 <div class="teaser-section">
                                     <div class="left-side">
-                                        <img src="img/photo/contact-bg.webp" alt="Teaser Image" loading="lazy" class="teaser-image">
-                                        <!-- <div class="center-btn">
-                                <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
-                                </div> -->
+                                        <video class="video4" autoplay loop muted>
+                                            <source src="img/content_hero/vid1.mov" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
                                     </div>
                                     <div class="right-side">
                                         <!-- <h2>Ready to Get Started?</h2> -->
@@ -1276,7 +1282,8 @@
 
                         <footer class="footer8">
                             <div class="container8">
-                                <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" loading="lazy" alt="">
+                                <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png"
+                                        loading="lazy" alt="">
                                 </div>
                                 <ul class="media-icons8">
                                     <li><a href=""><i class="fab fa-facebook"></i></a></li>
