--- a/team.html
+++ b/team.html
@@ -234,7 +234,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/1.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/1.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Anna Oldman</a></h5>
@@ -253,7 +253,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/3.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/3.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Oscar Freeman</a></h5>
@@ -272,7 +272,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/2.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/2.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Emma Newman</a></h5>
@@ -291,7 +291,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/4.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/4.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Lisa Trueman</a></h5>
@@ -310,7 +310,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/5.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/5.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Tom Oldman</a></h5>
@@ -329,7 +329,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/6.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/6.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Corey Trueman</a></h5>
@@ -348,7 +348,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/7.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/7.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Justin Newman</a></h5>
@@ -367,7 +367,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3">
 
                                 <div class="mil-team-card mil-up mil-mb-30">
-                                    <img src="img/faces/8.jpg" loading="lazy" alt="Team member">
+                                    <img src="img/team/8.jpeg" loading="lazy" alt="Team member">
                                     <div class="mil-description">
                                         <div class="mil-secrc-text">
                                             <h5 class="mil-muted mil-mb-5"><a href="home-2.html">Spunkie</a></h5>
