food on focus second set of chages content updation

--- a/home-1.html
+++ b/home-1.html
@@ -316,10 +316,9 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Alpro</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Tittle</h5>
+                                                        <h5>Alpro</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -343,10 +342,9 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Project 1</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Tittle</h5>
+                                                        <h5>Godiva</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -370,10 +368,9 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Project 2</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Tittle</h5>
+                                                        <h5>Guinness</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -398,10 +395,9 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Project 3</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Tittle</h5>
+                                                        <h5>Plantaholic</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -425,10 +421,9 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Project 4</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Tittle</h5>
+                                                        <h5>Godiva</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -452,10 +447,9 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">Project 4</div>
                                                             <div class="mil-label mil-upper">may 24 2023</div>
                                                         </div>
-                                                        <h5>Tittle</h5>
+                                                        <h5>OMA</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
                                                         <a href="#" class="mil-button mil-arrow-place">
@@ -945,24 +939,24 @@
                         <div class="swiper-container mil-infinite-show mil-up">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame"><img
-                                            src="img/brand-logos/talabat.png" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img src="img/brand-logos/talabat.png"
+                                            loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame"><img
-                                            src="img/brand-logos/alpro.png" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img src="img/brand-logos/alpro.png"
+                                            loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame"><img
-                                            src="img/brand-logos/godiva.png" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img src="img/brand-logos/godiva.png"
+                                            loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame"><img
-                                            src="img/brand-logos/oma.jpg" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img src="img/brand-logos/oma.jpg"
+                                            loading="lazy" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame"><img
-                                            src="img/brand-logos/plantaholic.png" loading="lazy" alt="logo"></a>
+                                    <a href="#." class="mil-partner-frame"><img src="img/brand-logos/plantaholic.png"
+                                            loading="lazy" alt="logo"></a>
                                 </div>
                             </div>
                         </div>
@@ -995,7 +989,6 @@
                                 </div>
                                 <div class="mil-post-descr">
                                     <div class="mil-labels mil-up mil-mb-30">
-                                        <div class="mil-label mil-upper mil-accent">Project 1</div>
                                         <div class="mil-label mil-upper">may 24 2023</div>
                                     </div>
                                     <h4 class="mil-up mil-mb-30">How to Become a Graphic Designer in 10 Simple Steps
@@ -1022,7 +1015,6 @@
                                 </div>
                                 <div class="mil-post-descr">
                                     <div class="mil-labels mil-up mil-mb-30">
-                                        <div class="mil-label mil-upper mil-accent">Project 1</div>
                                         <div class="mil-label mil-upper">may 24 2023</div>
                                     </div>
                                     <h4 class="mil-up mil-mb-30">16 Best Graphic Design Online and Offline Courses</h4>
