--- a/content.html
+++ b/content.html
@@ -222,7 +222,7 @@
 
         <!-- frame -->
         <div class="mil-frame">
-            <div class="mil-frame-top">
+            <div class="mil-frame-top-scrolled">
                 <a href="home-1.html" class="mil-logo"><img class="custlogo" src="img/base/FNF LOGO NEW.png"
                         alt="fnflogo"></a>
                 <div class="mil-menu-btn">
@@ -355,7 +355,7 @@
                         </div>
                         <div class="video-section4">
                             <video class="video4" autoplay loop muted>
-                                <source src="img/content_hero/vid1.mov" type="video/mp4">
+                                <source src="video/design.mov" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
@@ -691,172 +691,6 @@
                 </section>
                 <!-- prices end -->
 
-                <!-- timeline-start -->
-
-                <section class="section-vr-timeline">
-                    <h1 class="timeline-heading">OUR PROCESS</h1>
-                    <div class="section-timeline">
-                        <div class="container-1282">
-                            <div class="timeline_component">
-                                <div class="timeline_progress">
-                                    <div class="timeline_progress-bar"></div>
-                                </div>
-
-                                <div class="mil-animation-frame mil-tab-mobile">
-                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
-                                        data-value-2="1.4" style="top: 300px; right: -100px"></div>
-                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
-                                        data-value-2="1" style="left: -100px;top: 100px;"></div>
-                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
-                                        data-value-2="1.4" style="top: 1500px; right: -100px"></div>
-                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
-                                        data-value-2="1" style="left: -100px;top: 1300px;"></div>
-                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
-                                        data-value-2="1.4" style="top: 2400px; right: -100px"></div>
-                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
-                                        data-value-2="1" style="left: -100px;top: 2200px;"></div>
-                                </div>
-
-                                <div class="timeline_item" data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3d4">
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d4-0686a3cd"
-                                        class="timeline_left">
-                                        <div class="timeline_date-text">Brief</div>
-                                    </div>
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d7-0686a3cd"
-                                        class="timeline_centre">
-                                        <div class="timeline_circle"></div>
-                                    </div>
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d9-0686a3cd"
-                                        class="timeline_right">
-                                        <div class="margin-bottom-xlarge">
-                                            <div class="timeline_text">Contact us for personalized guidance and share
-                                                your culinary vision with our expert team.</div>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-
-                                <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3e0" class="timeline_item">
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e1-0686a3cd"
-                                        class="timeline_left">
-                                        <div class="timeline_date-text">Discover</div>
-                                    </div>
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3e4-0686a3cd"
-                                        class="timeline_centre">
-                                        <div class="timeline_circle"></div>
-                                    </div>
-                                    <div class="timeline_right">
-                                        <div class="margin-bottom-medium">
-                                            <div class="timeline_text">We then get you on a discovery call to have a
-                                                discussion about your aspirations. We'll provide a focused approach to
-                                                brand-building, ensuring your culinary vision comes to life.<br>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3eb" class="timeline_item">
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ec-0686a3cd"
-                                        class="timeline_left">
-                                        <div class="timeline_date-text">Scope</div>
-                                    </div>
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3ef-0686a3cd"
-                                        class="timeline_centre">
-                                        <div class="timeline_circle"></div>
-                                    </div>
-                                    <div class="timeline_right">
-                                        <div class="margin-bottom-medium">
-                                            <div class="timeline_text">Find out the time and budget details customized
-                                                to your project. We'll work closely with you to ensure every aspect is
-                                                carefully considered..<br>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd"
-                                        class="timeline_left">
-                                        <div class="timeline_date-text">Assemble</div>
-                                    </div>
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3fa-0686a3cd"
-                                        class="timeline_centre">
-                                        <div class="timeline_circle"></div>
-                                    </div>
-                                    <div class="timeline_right">
-                                        <div class="margin-bottom-medium">
-                                            <div class="timeline_text">Our team puts together a proposal, moodboard,
-                                                references and ensures it aligns perfectly with your vision.<br></div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a401" class="timeline_item">
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a402-0686a3cd"
-                                        class="timeline_left">
-                                        <div class="timeline_date-text">Start</div>
-                                    </div>
-                                    <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a405-0686a3cd"
-                                        class="timeline_centre">
-                                        <div class="timeline_circle"></div>
-                                    </div>
-                                    <div class="timeline_right">
-                                        <div class="margin-bottom-medium end">
-                                            <div class="timeline_text">Once payments and budgets are through, we'll
-                                                guide you through every step, from concept to completion, ensuring your
-                                                brand flourishes..<br>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="overlay-fade-bottom"></div>
-                                <div class="overlay-fade-top"></div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <script>
-                    window.addEventListener('scroll', function () {
-                        var timelineProgress = document.querySelector('.timeline_progress-bar');
-                        var vrTimelineSection = document.querySelector('.section-vr-timeline');
-                        var servicesSection = document.querySelector('.mil-inner-banner');
-
-                        var sectionRect = vrTimelineSection.getBoundingClientRect();
-                        var servicesRect = servicesSection.getBoundingClientRect();
-
-                        // Check if either the timeline section or the services section is within the viewport
-                        if (sectionRect.top <= window.innerHeight && servicesRect.top >= (window.innerHeight / 2)) {
-                            timelineProgress.classList.add('show');
-                        } else {
-                            timelineProgress.classList.remove('show');
-                        }
-
-                        // --maroon:#972221;
-                        //   --orange:#f89c1f;
-
-                        var progressRect = timelineProgress.getBoundingClientRect();
-                        var elements = document.querySelectorAll('.timeline_item');
-                        elements.forEach(function (element) {
-                            var elementRect = element.querySelector('.timeline_circle').getBoundingClientRect();
-                            if (progressRect.bottom >= elementRect.top && progressRect.top <= elementRect.bottom) {
-                                element.querySelector('.timeline_circle').style.backgroundColor = '#f89c1f'; // Change circle color when hit
-                                element.querySelector('.timeline_left .timeline_date-text').style.color = '#972221'
-                                element.querySelector('.timeline_right .timeline_text').style.color = '#972221'
-                            } else {
-                                element.querySelector('.timeline_circle').style.backgroundColor = '#f89c1f96'; // Reset circle color
-                                element.querySelector('.timeline_left .timeline_date-text').style.color = '#87879b'
-                                element.querySelector('.timeline_right .timeline_text').style.color = '#87879b'
-                            }
-                        });
-
-
-
-                    });
-
-
-                </script>
-                <!-- timeline-end -->
-
                 <!-- Gallery --> 
                  <!-- sidpoint -->
                 <section class="gallery">
@@ -1175,10 +1009,10 @@
                             <section class="Form-teaser">
                                 <div class="teaser-section">
                                     <div class="left-side">
-                                        <img src="img/photo/contact-bg.webp" alt="Teaser Image" class="teaser-image">
-                                        <!-- <div class="center-btn">
-                                    <a href="contact.html" class="schedule-button">Let's Schedule<i style="padding-left: 5px;" class="fa-solid fa-calendar-check"></i></a>
-                                    </div> -->
+                                        <video class="video4" autoplay loop muted>
+                                            <source src="img/content_hero/vid1.mov" type="video/mp4">
+                                            Your browser does not support the video tag.
+                                        </video>
                                     </div>
                                     <div class="right-side">
                                         <!-- <h2>Ready to Get Started?</h2> -->
